--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js upload multiple files/images to MongoDB Demo",
   "main": "src/server.js",
   "scripts": {
+    "start": "nodemon -w src src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
