--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
